# GPU-Programming-Specialization

./: .gitignore  README.md
Course 1 - Introduction to Concurrent Programming with GPUs/CUDA Project/: Makefile
Course 1 - Introduction to Concurrent Programming with GPUs/Dining Philosophers/: results.txt
Course 1 - Introduction to Concurrent Programming with GPUs/Python Parallel Programming/: assignment.py  output-7TTyz.txt
Course 2 - Introduction to Parallel Programming with CUDA/Allocation and Assignment of Different Types of Host and Global Memory/: broken_mapped_memory_allocation.cu  broken_paged_pinned_memory_allocation.cu  memory_allocation.cu  memory_copy.cu  output-IYn5V.txt  output-ZafI7.txt  output-avffI.txt  output-pOwge.txt
Course 2 - Introduction to Parallel Programming with CUDA/CUDA Device Memory Analysis/: memory_analysis.cu  memory_analysis.h  output.csv  run.sh
Course 2 - Introduction to Parallel Programming with CUDA/CUDA Shared and Constant Memory Image Manipulation/: Makefile  output.txt  simpleLinearBlurFilter.cu
Course 2 - Introduction to Parallel Programming with CUDA/Data Search/: output-TZ5dO.txt  output-fnOOK.txt
Course 2 - Introduction to Parallel Programming with CUDA/Data Search Programming Assignment/: output-Vmwc9.txt  search.cu
Course 3 - CUDA at Scale for the Enterprise/CUDA GPU Identification/: multi_gpu.cu
Course 4 - CUDA Advanced Libraries/CUDA Specialization Capstone Project/: README.md  pyproject.toml  run-application.sh  run.sh  setup-environment.sh
Course 4 - CUDA Advanced Libraries/CUDA Specialization Capstone Project/src/: application.py  project.cpp
Course 4 - CUDA Advanced Libraries/CUDA Specialization Capstone Project/src/model/: train_model.py
(+19 files in other folders)
