[project]
name = "capstone-project-gpu-specialization"
version = "0.1.0"
description = "Space Capstone Project for GPU Specialization"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pandas",
    "tensorflow-gpu==2.10.0",
    "tensorflow-io-gcs-filesystem==0.27.0",
]

[dependency-groups]
dev = [
    "pre-commit",
    "pytest",
]

[tool.pytest.ini_options]
pythonpath = [
  "."
]

[tool.setuptools]
packages = ["capstone-project-gpu-specialization"]