[project]
name = "capstone-project-gpu-specialization"
version = "0.1.0"
description = "Space Capstone Project for GPU Specialization"
readme = "README.md"
requires-python = ">=3.8, <3.9"
dependencies = [
    "pandas",
    "tensorflow-gpu",
    "tensorflow-io-gcs-filesystem",
    "nvidia-cudnn-cu11>=8.0,<9.0",
]

[dependency-groups]
dev = [
    "pre-commit",
    "pytest",
]

[tool.setuptools]
packages = ["capstone-project-gpu-specialization"]